# ngoding

./: CMakeLists.txt  test.cpp  testmafia.cpp
Penyisihan VOCOMFEST/: 1289.cpp  1290.cpp  1291.cpp  1292.cpp
PenyisihanCompfest9/: B.cpp  C.cpp  G.cpp  H.cpp  I.cpp
PenyisihanIDEAFUSE2017/: KAW.cpp  NUM.cpp  POW.cpp  SEQ.cpp
algorithms/: HuffmanCompression_Decode.cpp  HuffmanCompression_Encode.cpp  LCS.cpp  a_star.cpp  aj.cpp
kuliah/daa_1/: Jagung.cpp
kuliah/daa_2/: bitset_example.cpp
kuliah/graph_theory/: grafc.cpp
kuliah/linear_algebra/: Determinant.cpp  Inverse.cpp  copy.cpp  gauss.cpp
kuliah/object_oriented_programming/: Account.cpp  Bike.h  Car.h  CarbonFootprint.cpp  Employee.cpp  Invoice.cpp  Koperasi.cpp  ParkingLot.cpp  Tamagotchi.cpp  Tamagotchi_.cpp  Vehicle.h  main.cpp  wxWidgets.cpp
lib/: Algo.h  BigNumber.h  LinkedList.h  LinkedList_SinglyLinear.cpp  main.cpp
oj/algorithms/: djisktra.cpp  karatsuba.cpp
oj/eolymp/: 380.cpp  422.cpp  65.cpp
oj/pandaoj/: FUSION.cpp  IDEAFUSE16D.cpp  INC2013D.cpp  INC2013E.cpp  JC11C.cpp  JC9D.cpp  PARTY.cpp  WAVYTAB.cpp  bacto.cpp  jc7e.cpp
oj/spoj/: ANARC09A.cpp  EDIST.cpp  LCA.cpp  LOSTNSURVIVED.cpp  MIDEARTH.cpp  PERMUT2.cpp  ROADS.cpp  RPLB.cpp  SHPATH.cpp  SHUB1307.cpp  SUPPER.cpp  disjoint_set_union_find_data_structure.cpp  main.cpp  random.cpp  smiley1807.cpp  spoj_ACMEG2C.cpp  spoj_ADAQUEUE.cpp  spoj_ARRAYSUB.cpp  spoj_CMG.cpp  spoj_CODERE4.cpp  spoj_COVER01.cpp  spoj_CRCLE_UI.cpp  spoj_CUTSTICK.cpp  spoj_EXPOR.cpp  spoj_GUESS002.cpp  (+13 more)
sample/: file_io.cpp  putchar_unlocked.cpp
strukdat/: fp.cpp
(+149 files in other folders)
